# oxi-thread-pool

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
include/ThreadOxPool/: SchedulerTypes.h  TaskBase.h  TaskScheduler.h  ThreadPool.h  Worker.h
include/ThreadOxPool/Tasks/: TaskBase.h  TaskState.h  TaskStatus.h
src/: ThreadPool.cpp  Worker.cpp
tests/unit/: enqueue_basic.cpp  pool_basic.cpp
